# code-interpreter

./: .gitignore  .tool-versions  CODEOWNERS  Dockerfile  Makefile  README.md  openapi.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json5
.changeset/: add-language-overloads.md  afraid-wolves-return.md  angry-paws-battle.md  bash-cwd.md  beige-turkeys-knock.md  brave-olives-play.md  breezy-bananas-lay.md  calm-feet-clap.md  clean-lies-perform.md  clever-bears-accept.md  clever-berries-shave.md  clever-radios-send.md  cold-deers-know.md  cold-pillows-grow.md  config.json  curly-pumpkins-kick.md  cyan-pears-hug.md  dry-flowers-beg.md  dry-lions-stare.md  dull-bobcats-tie.md  dull-flies-bow.md  early-crabs-sort.md  eight-queens-prove.md  (+76 more)
chart_data_extractor/: README.md  package.json  pyproject.toml
chart_data_extractor/e2b_charts/: __init__.py  main.py
chart_data_extractor/e2b_charts/charts/: __init__.py  bars.py  base.py  pie.py  planar.py
chart_data_extractor/e2b_charts/graphs/: __init__.py  bars.py  base.py  pie.py  planar.py
chart_data_extractor/e2b_charts/utils/: __init__.py  filtering.py  rounding.py
chart_data_extractor/tests/charts/: test_bar.py  test_blank.py  test_categorical_scale.py  test_datetime_scale.py  test_line.py  test_log_graph.py  test_scatter.py  test_unknown.py
chart_data_extractor/tests/graphs/: test_bar.py  test_box_and_whiskers.py  test_categorical_scale.py  test_datetime_scale.py  test_line.py  test_log_graph.py  test_pie.py  test_scatter.py  test_supergraph.py  test_unknown.py
chart_data_extractor/tests/utils/: test_detect_scale.py  test_is_grid_line.py
python/: README.md  async_example.py  example.py  package.json  pyproject.toml  pytest.ini
python/e2b_code_interpreter/: __init__.py  charts.py  code_interpreter_async.py  code_interpreter_sync.py  constants.py  exceptions.py  graphs.py  main.py  messaging.py  models.py
python/e2b_code_interpreter/client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
python/e2b_code_interpreter/client/api/: __init__.py  default_api.py
python/e2b_code_interpreter/client/api/default/: get_health.py  post_execute.py
python/e2b_code_interpreter/client/models/: __init__.py  error.py  execution.py  logs.py  result.py  result_extra.py  result_json.py
python/scripts/: generate_api_ref.sh  generate_sdk_ref.sh
python/tests/: benchmarking.py  conftest.py  performance.py  speed.py  test_bash.py  test_basic.py  test_display_data.py  test_execution_count.py  test_kernels.py  test_reconnect.py  test_sandbox_url.py  test_statefulness.py  test_streaming.py
python/tests/async/: test_async_bash.py  test_async_basic.py  test_async_callbacks.py  test_async_contexts.py  test_async_custom_repr_object.py  test_async_cwd.py  test_async_data.py  test_async_default_kernels.py  test_async_display_data.py  test_async_env_vars.py  test_async_execution_count.py  test_async_interrupt.py  test_async_kernels.py  test_async_killed.py  test_async_reconnect.py  test_async_statefulness.py  test_async_streaming.py  test_async_supervisord.py  test_async_systemd.py  test_async_timeout.py  test_bash.py  test_basic.py  test_custom_repr_object.py  test_display_data.py  test_execution_count.py  test_kernels.py  test_reconnect.py  test_statefulness.py  test_streaming.py
python/tests/async/env_vars/: test_bash.py  test_deno.py  test_java.py  test_js.py  test_python.py  test_r.py
python/tests/charts/: test_bar.py  test_box_and_whiskers.py  test_json.py  test_line.py  test_log_chart.py  test_pie.py  test_scale.py
python/tests/graphs/: test_bar.py  test_box_and_whiskers.py  test_line.py  test_log_graph.py  test_pie.py  test_scale.py  test_scatter.py  test_supergraph.py  test_unknown.py
python/tests/images/: test_images.py
python/tests/languages/: test_deno.py  test_js.py
python/tests/sync/: test_bash.py  test_basic.py  test_callbacks.py  test_contexts.py  test_custom_repr_object.py  test_cwd.py  test_data.py  test_default_kernels.py  test_display_data.py  test_env_vars.py  test_execution_count.py  test_interrupt.py  test_kernels.py  test_killed.py  test_reconnect.py  test_statefulness.py  test_streaming.py  test_supervisord.py  test_systemd.py  test_timeout.py
python/tests/sync/env_vars/: test_bash.py  test_deno.py  test_java.py  test_js.py  test_python.py  test_r.py
(+183 files in other folders)
