[tool.poetry]
name = "e2b-charts"
version = "0.0.2"
description = "Package for extracting data for E2B Code Interpreter"
authors = ["e2b <hello@e2b.dev>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://e2b.dev/"
repository = "https://github.com/e2b-dev/e2b-code-interpreter/tree/python"
packages = [{ include = "e2b_charts" }]

[tool.poetry.dependencies]
python = "^3.10"

numpy = "^1.26.4"
matplotlib = "^3.9.2"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
python-dotenv = "^1.0.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/e2b-dev/code-interpreter/issues"
