[tool.poetry]
name = "e2b-charts"
version = "0.0.4"
description = "Package for extracting data for E2B Code Interpreter"
authors = ["e2b <hello@e2b.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://e2b.dev/"
repository = "https://github.com/e2b-dev/e2b-code-interpreter/tree/python"
packages = [{ include = "e2b_charts" }]

[tool.poetry.dependencies]
python = "^3.13"

numpy = "^2.3.5"
matplotlib = "^3.10.3"
pydantic = "^2.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
python-dotenv = "^1.2.1"
pytest-dotenv = "^0.5.2"
ruff = "^0.11.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/e2b-dev/code-interpreter/issues"

[tool.ruff.lint]
ignore = ["F401", "F403"]