[tool.poetry]
name = "e2b-code-interpreter"
version = "1.2.0b2"
description = "E2B Code Interpreter - Stateful code execution"
authors = ["e2b <hello@e2b.dev>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://e2b.dev/"
repository = "https://github.com/e2b-dev/code-interpreter/tree/main/python"
packages = [{ include = "e2b_code_interpreter" }]

[tool.poetry.dependencies]
python = "^3.9"

httpx = ">=0.20.0, <1.0.0"
attrs = ">=21.3.0"
e2b = "1.2.0b2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
python-dotenv = "^1.0.0"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^0.23.7"
pytest-xdist = "^3.6.1"
black = "23.12.1"
pydoc-markdown = "^4.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/e2b-dev/code-interpreter/issues"
